manifests/e2e/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggragated-webhook
  namespace: ${NAMESPACE}
  labels:
    app: aggragated-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggragated-webhook
  template:
    metadata:
      labels:
        app: aggragated-webhook
    spec:
      serviceAccountName: aggragated-webhook-sa
      containers:
        - name: aggragated-webhook
          image: pingcap/tidb-operator:latest
          imagePullPolicy: Always
          command:
            - /usr/local/bin/tidb-aggragated-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: tidb-aggragated-webhook
  namespace: ${NAMESPACE}
  labels:
    app: aggragated-webhook
spec:
  ports:
    - name: https-webhook # optional
      port: 443
  selector:
    app: aggragated-webhook
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation-admission-contorller-cfg
  labels:
    app: admission-controller
webhooks:
  - name: statefulset-admission-controller.pingcap.net
    failurePolicy: Fail
    clientConfig:
      service:
        name: kubernetes
        namespace: default
        path: "/apis/admission.tidb.pingcap.com/v1alpha1/statefulsetadmissionreviews"
      caBundle: null
    rules:
      - operations: [ "UPDATE" ]
        apiGroups: [ "apps", "" ]
        apiVersions: ["v1beta1", "v1"]
        resources: ["statefulsets"]
      - operations: [ "UPDATE" ]
        apiGroups: [ "apps.pingcap.com"]
        apiVersions: ["v1alpha1"]
        resources: ["statefulsets"]
---
